filtre guitare done

--- a/Index.html
+++ b/Index.html
@@ -716,6 +716,259 @@
             </button>
         </div>
 
+        <div class="gfc">
+            <h1 id="gfc-title">Inspirez-vous des créations uniques</h1>
+            <p class="tmx-model-sub">
+                Découvrez les guitares exceptionnelles créées par notre
+                communauté
+            </p>
+
+            <!-- container global (transparent) -->
+
+            <!-- radios de contrôle (cachés) -->
+            <input
+                class="gfc-radio"
+                type="radio"
+                name="gfc-filter"
+                id="gfc-all"
+                checked
+            />
+            <input
+                class="gfc-radio"
+                type="radio"
+                name="gfc-filter"
+                id="gfc-rock"
+            />
+            <input
+                class="gfc-radio"
+                type="radio"
+                name="gfc-filter"
+                id="gfc-blues"
+            />
+            <input
+                class="gfc-radio"
+                type="radio"
+                name="gfc-filter"
+                id="gfc-folk"
+            />
+
+            <!-- Barre de filtres (centrée et même largeur que la grille) -->
+            <div class="gfc-filters-wrap">
+                <div class="gfc-filters">
+                    <!-- /* ICON : entonnoir (filtre) à remplacer */ -->
+                    <label class="gfc-chip" for="gfc-all">
+                        <img
+                            class="gfc-chip-icon"
+                            src="asset/icon/icon_filtre_guitare.png"
+                            alt=""
+                        />
+                        Tous
+                    </label>
+
+                    <label class="gfc-chip" for="gfc-rock">Rock</label>
+                    <label class="gfc-chip" for="gfc-blues">Blues</label>
+                    <label class="gfc-chip" for="gfc-folk">Folk</label>
+                </div>
+            </div>
+
+            <!-- VIEWPORT (slides) -->
+            <div class="gfc-viewport">
+                <!-- ========= SLIDE : TOUS ========= -->
+                <section class="gfc-slide gfc-slide--all">
+                    <div class="gfc-grid">
+                        <!-- CARTE 1 -->
+                        <article class="gfc-card">
+                            <div class="gfc-media">
+                                <!-- /* IMAGE : Thunder Strike (à remplacer) */ -->
+                                <img
+                                    src="asset/IMG/Filtre_guitare/Rock/Thunder Strike.png"
+                                    alt="Thunder Strike"
+                                />
+                                <span class="gfc-pill">Rock</span>
+                            </div>
+                            <div class="gfc-body">
+                                <h3 class="gfc-title">Thunder Strike</h3>
+                                <h4>Par Marc D.</h4>
+                                <div class="gfc-likes">
+                                    <!-- /* ICON : cœur contour (à remplacer) */ -->
+                                    <img
+                                        class="gfc-like-ico"
+                                        src="asset/icon/icon_heart_filtre_genre_guitare.png"
+                                        alt=""
+                                    />
+                                    <span class="gfc-like-count">234</span>
+                                </div>
+                            </div>
+                        </article>
+
+                        <!-- CARTE 2 -->
+                        <article class="gfc-card">
+                            <div class="gfc-media">
+                                <!-- /* IMAGE : Andalucia Dreams (à remplacer) */ -->
+                                <img
+                                    src="asset/IMG/Filtre_guitare/Andalucia Dreams.png"
+                                    alt="Andalucia Dreams"
+                                />
+                                <span class="gfc-pill">Flamenco</span>
+                            </div>
+                            <div class="gfc-body">
+                                <h3 class="gfc-title">Andalucia Dreams</h3>
+                                <h4>Par Sofia R.</h4>
+                                <div class="gfc-likes">
+                                    <!-- /* ICON : cœur contour (à remplacer) */ -->
+                                    <img
+                                        class="gfc-like-ico"
+                                        src="asset/icon/icon_heart_filtre_genre_guitare.png"
+                                        alt=""
+                                    />
+                                    <span class="gfc-like-count">189</span>
+                                </div>
+                            </div>
+                        </article>
+
+                        <!-- CARTE 3 -->
+                        <article class="gfc-card">
+                            <div class="gfc-media">
+                                <!-- /* IMAGE : Missipi Soul (à remplacer) */ -->
+                                <img
+                                    src="asset/IMG/Filtre_guitare/Blues/Missipi Soul.png"
+                                    alt="Missipi Soul"
+                                />
+                                <span class="gfc-pill">Blues</span>
+                            </div>
+                            <div class="gfc-body">
+                                <h3 class="gfc-title">Missipi Soul</h3>
+                                <h4>Par John B.</h4>
+                                <div class="gfc-likes">
+                                    <!-- /* ICON : cœur contour (à remplacer) */ -->
+                                    <img
+                                        class="gfc-like-ico"
+                                        src="asset/icon/icon_heart_filtre_genre_guitare.png"
+                                        alt=""
+                                    />
+                                    <span class="gfc-like-count">312</span>
+                                </div>
+                            </div>
+                        </article>
+
+                        <!-- CARTE 4 -->
+                        <article class="gfc-card">
+                            <div class="gfc-media">
+                                <!-- /* IMAGE : Forest Wisper (à remplacer) */ -->
+                                <img
+                                    src="asset/IMG/Filtre_guitare/Folk/Forest Wisper.png"
+                                    alt="Forest Wisper"
+                                />
+                                <span class="gfc-pill">Folk</span>
+                            </div>
+                            <div class="gfc-body">
+                                <h3 class="gfc-title">Forest Wisper</h3>
+                                <h4>Par Emma L.</h4>
+                                <div class="gfc-likes">
+                                    <!-- /* ICON : cœur contour (à remplacer) */ -->
+                                    <img
+                                        class="gfc-like-ico"
+                                        src="asset/icon/icon_heart_filtre_genre_guitare.png"
+                                        alt=""
+                                    />
+                                    <span class="gfc-like-count">312</span>
+                                </div>
+                            </div>
+                        </article>
+                    </div>
+                </section>
+
+                <!-- ========= SLIDE : ROCK ========= -->
+                <section class="gfc-slide gfc-slide--rock">
+                    <div class="gfc-col">
+                        <article class="gfc-card">
+                            <div class="gfc-media">
+                                <!-- /* IMAGE : Thunder Strike (à remplacer) */ -->
+                                <img
+                                    src="asset/IMG/Filtre_guitare/Rock/Thunder Strike.png"
+                                    alt="Thunder Strike"
+                                />
+                                <span class="gfc-pill">Rock</span>
+                            </div>
+                            <div class="gfc-body">
+                                <h3 class="gfc-title">Thunder Strike</h3>
+                                <h4>Par Marc D.</h4>
+                                <div class="gfc-likes">
+                                    <!-- /* ICON : cœur contour (à remplacer) */ -->
+                                    <img
+                                        class="gfc-like-ico"
+                                        src="asset/icon/icon_heart_filtre_genre_guitare.png"
+                                        alt=""
+                                    />
+                                    <span class="gfc-like-count">234</span>
+                                </div>
+                            </div>
+                        </article>
+                    </div>
+                </section>
+
+                <!-- ========= SLIDE : BLUES ========= -->
+                <section class="gfc-slide gfc-slide--blues">
+                    <div class="gfc-col">
+                        <article class="gfc-card">
+                            <div class="gfc-media">
+                                <!-- /* IMAGE : Missipi Soul (à remplacer) */ -->
+                                <img
+                                    src="asset/IMG/Filtre_guitare/Blues/Missipi Soul.png"
+                                    alt="Missipi Soul"
+                                />
+                                <span class="gfc-pill">Blues</span>
+                            </div>
+                            <div class="gfc-body">
+                                <h3 class="gfc-title">Missipi Soul</h3>
+                                <h4>Par John B.</h4>
+                                <div class="gfc-likes">
+                                    <!-- /* ICON : cœur contour (à remplacer) */ -->
+                                    <img
+                                        class="gfc-like-ico"
+                                        src="asset/icon/icon_heart_filtre_genre_guitare.png"
+                                        alt=""
+                                    />
+                                    <span class="gfc-like-count">312</span>
+                                </div>
+                            </div>
+                        </article>
+                    </div>
+                </section>
+
+                <!-- ========= SLIDE : FOLK ========= -->
+                <section class="gfc-slide gfc-slide--folk">
+                    <div class="gfc-col">
+                        <article class="gfc-card">
+                            <div class="gfc-media">
+                                <!-- /* IMAGE : Forest Wisper (à remplacer) */ -->
+                                <img
+                                    src="asset/IMG/Filtre_guitare/Folk/Forest Wisper.png"
+                                    alt="Forest Wisper"
+                                />
+                                <span class="gfc-pill">Folk</span>
+                            </div>
+                            <div class="gfc-body">
+                                <h3 class="gfc-title">Forest Wisper</h3>
+                                <h4>Par Emma L.</h4>
+                                <div class="gfc-likes">
+                                    <!-- /* ICON : cœur contour (à remplacer) */ -->
+                                    <img
+                                        class="gfc-like-ico"
+                                        src="asset/icon/icon_heart_filtre_genre_guitare.png"
+                                        alt=""
+                                    />
+                                    <span class="gfc-like-count">312</span>
+                                </div>
+                            </div>
+                        </article>
+                    </div>
+                </section>
+            </div>
+            <!-- /viewport -->
+        </div>
+        <!-- /gfc -->
+
         <script>
             const burger = document.querySelector(".burger");
             const mobileMenu = document.getElementById("mobileMenu");
