filtre carousel really done

--- a/Index.html
+++ b/Index.html
@@ -968,8 +968,11 @@
             <!-- /viewport -->
         </div>
         <!-- /gfc -->
-
-        
+        <div class="cta-center">
+            <button type="button" class="btn-contact">
+                <span class="text-gradient">Commencer</span>
+            </button>
+        </div>
 
         <script>
             const burger = document.querySelector(".burger");
