--- a/Index.html
+++ b/Index.html
@@ -989,9 +989,22 @@
                     </button>
                 </div>
             </main>
-            <!-- HERO (toujours après les cartes) -->
             <section class="hero" aria-label="Bandeau guitare">
                 <img src="asset/IMG/page_slider/bandeau.png" alt="Guitare" />
+
+                <!-- Empile le texte + la carte, le texte au-dessus -->
+                <div class="hero-stack">
+                    <!-- Texte par-dessus l'image -->
+                    <div class="hero-content">
+                        <h1 class="hero-title">
+                            Rejoignez notre communauté&nbsp;!
+                        </h1>
+                        <p class="hero-subtitle">
+                            Partagez vos créations et inspirez-vous des autres
+                            musiciens
+                        </p>
+                    </div>
+                </div>    
             </section>
 
             <!-- CTA sous l'image -->
