--- a/Index.html
+++ b/Index.html
@@ -1004,7 +1004,7 @@
                             musiciens
                         </p>
                     </div>
-                </div>    
+                </div>
             </section>
 
             <!-- CTA sous l'image -->
@@ -1014,6 +1014,50 @@
                 </button>
             </div>
         </main>
+        <section class="help-intro">
+            <h2 class="help-title">Besoin d'aide pour débuter&nbsp;?</h2>
+            <p class="help-subtitle">Nous vous accompagnons à chaque étape</p>
+        </section>
+
+        <section class="help-cards">
+            <div class="help-grid">
+                <article class="hc-card">
+                    <!-- /* ICON 1 : remplace le src par ton fichier */ -->
+                    <div class="hc-icon is-guide">
+                        <img class="hc-ico" src="icons/guide.svg" alt="" />
+                    </div>
+                    <h3 class="hc-title">Guide ultime</h3>
+                    <p class="hc-subtitle">Guide complet de A à Z</p>
+                </article>
+
+                <article class="hc-card">
+                    <!-- /* ICON 2 : remplace le src par ton fichier */ -->
+                    <div class="hc-icon is-custom">
+                        <img class="hc-ico" src="icons/custom.svg" alt="" />
+                    </div>
+                    <h3 class="hc-title">Comment customiser</h3>
+                    <p class="hc-subtitle">Tutoriel pas à pas</p>
+                </article>
+
+                <article class="hc-card">
+                    <!-- /* ICON 3 : remplace le src par ton fichier */ -->
+                    <div class="hc-icon is-vocab">
+                        <img class="hc-ico" src="icons/vocab.svg" alt="" />
+                    </div>
+                    <h3 class="hc-title">Vocabulaire guitare</h3>
+                    <p class="hc-subtitle">Dictionnaire musical</p>
+                </article>
+
+                <article class="hc-card">
+                    <!-- /* ICON 4 : remplace le src par ton fichier */ -->
+                    <div class="hc-icon is-faq">
+                        <img class="hc-ico" src="icons/faq.svg" alt="" />
+                    </div>
+                    <h3 class="hc-title">FAQ</h3>
+                    <p class="hc-subtitle">Question fréquente</p>
+                </article>
+            </div>
+        </section>
 
         <script>
             const burger = document.querySelector(".burger");
