--- a/Index.html
+++ b/Index.html
@@ -1024,7 +1024,7 @@
                 <article class="hc-card">
                     <!-- /* ICON 1 : remplace le src par ton fichier */ -->
                     <div class="hc-icon is-guide">
-                        <img class="hc-ico" src="icons/guide.svg" alt="" />
+                        <img class="hc-ico" src="asset/icon/icon_guide_article.png" alt="" />
                     </div>
                     <h3 class="hc-title">Guide ultime</h3>
                     <p class="hc-subtitle">Guide complet de A à Z</p>
@@ -1033,7 +1033,7 @@
                 <article class="hc-card">
                     <!-- /* ICON 2 : remplace le src par ton fichier */ -->
                     <div class="hc-icon is-custom">
-                        <img class="hc-ico" src="icons/custom.svg" alt="" />
+                        <img class="hc-ico" src="asset/icon/icon_reglage.png" alt="" />
                     </div>
                     <h3 class="hc-title">Comment customiser</h3>
                     <p class="hc-subtitle">Tutoriel pas à pas</p>
@@ -1042,7 +1042,7 @@
                 <article class="hc-card">
                     <!-- /* ICON 3 : remplace le src par ton fichier */ -->
                     <div class="hc-icon is-vocab">
-                        <img class="hc-ico" src="icons/vocab.svg" alt="" />
+                        <img class="hc-ico" src="asset/icon/icon_music.png" alt="" />
                     </div>
                     <h3 class="hc-title">Vocabulaire guitare</h3>
                     <p class="hc-subtitle">Dictionnaire musical</p>
@@ -1051,7 +1051,7 @@
                 <article class="hc-card">
                     <!-- /* ICON 4 : remplace le src par ton fichier */ -->
                     <div class="hc-icon is-faq">
-                        <img class="hc-ico" src="icons/faq.svg" alt="" />
+                        <img class="hc-ico" src="asset/icon/icon_faq.png" alt="" />
                     </div>
                     <h3 class="hc-title">FAQ</h3>
                     <p class="hc-subtitle">Question fréquente</p>
