avant dernier element done

--- a/Index.html
+++ b/Index.html
@@ -1024,7 +1024,11 @@
                 <article class="hc-card">
                     <!-- /* ICON 1 : remplace le src par ton fichier */ -->
                     <div class="hc-icon is-guide">
-                        <img class="hc-ico" src="asset/icon/icon_guide_article.png" alt="" />
+                        <img
+                            class="hc-ico"
+                            src="asset/icon/icon_guide_article.png"
+                            alt=""
+                        />
                     </div>
                     <h3 class="hc-title">Guide ultime</h3>
                     <p class="hc-subtitle">Guide complet de A à Z</p>
@@ -1033,7 +1037,11 @@
                 <article class="hc-card">
                     <!-- /* ICON 2 : remplace le src par ton fichier */ -->
                     <div class="hc-icon is-custom">
-                        <img class="hc-ico" src="asset/icon/icon_reglage.png" alt="" />
+                        <img
+                            class="hc-ico"
+                            src="asset/icon/icon_reglage.png"
+                            alt=""
+                        />
                     </div>
                     <h3 class="hc-title">Comment customiser</h3>
                     <p class="hc-subtitle">Tutoriel pas à pas</p>
@@ -1042,7 +1050,11 @@
                 <article class="hc-card">
                     <!-- /* ICON 3 : remplace le src par ton fichier */ -->
                     <div class="hc-icon is-vocab">
-                        <img class="hc-ico" src="asset/icon/icon_music.png" alt="" />
+                        <img
+                            class="hc-ico"
+                            src="asset/icon/icon_music.png"
+                            alt=""
+                        />
                     </div>
                     <h3 class="hc-title">Vocabulaire guitare</h3>
                     <p class="hc-subtitle">Dictionnaire musical</p>
@@ -1051,12 +1063,96 @@
                 <article class="hc-card">
                     <!-- /* ICON 4 : remplace le src par ton fichier */ -->
                     <div class="hc-icon is-faq">
-                        <img class="hc-ico" src="asset/icon/icon_faq.png" alt="" />
+                        <img
+                            class="hc-ico"
+                            src="asset/icon/icon_faq.png"
+                            alt=""
+                        />
                     </div>
                     <h3 class="hc-title">FAQ</h3>
                     <p class="hc-subtitle">Question fréquente</p>
                 </article>
             </div>
+        </section>
+        <div class="viewport-center">
+            <section class="card-ia">
+                <h1 class="card-ia__title">Guide IA personnalisé</h1>
+                <p class="card-ia__subtitle">
+                    Notre assistant intelligent vous aide à créer la guitare
+                    parfaite
+                </p>
+                <a href="#" class="card-ia__cta">
+                    <!-- 🔁 ICÔNE : remplace le src ci-dessous par TON chemin -->
+                    <img
+                        class="card-ia__icon"
+                        src="asset/icon/icon_star.png"
+                        alt=""
+                        aria-hidden="true"
+                    />
+                    Essayer le Guide IA
+                </a>
+            </section>
+        </div>
+
+        <section class="faq-block">
+            <h2 class="faq__title">Question fréquente</h2>
+
+            <ul class="faq__list">
+                <li class="faq__item">
+                    <span class="faq__q"
+                        >Combien de temps faut-il pour recevoir ma
+                        guitare&nbsp;?</span
+                    >
+                    <!-- 🔁 ICÔNE : remplace le src ci-dessous par TON chemin -->
+                    <img
+                        class="faq__chev"
+                        src="asset/icon/chevron-right.png"
+                        alt=""
+                        aria-hidden="true"
+                    />
+                </li>
+
+                <li class="faq__item">
+                    <span class="faq__q"
+                        >Puis-je modifier ma commande après
+                        validation&nbsp;?</span
+                    >
+                    <!-- 🔁 ICÔNE : remplace le src ci-dessous par TON chemin -->
+                    <img
+                        class="faq__chev"
+                        src="asset/icon/chevron-right.png"
+                        alt=""
+                        aria-hidden="true"
+                    />
+                </li>
+
+                <li class="faq__item">
+                    <span class="faq__q"
+                        >Proposez-vous une garantie&nbsp;?</span
+                    >
+                    <!-- 🔁 ICÔNE : remplace le src ci-dessous par TON chemin -->
+                    <img
+                        class="faq__chev"
+                        src="asset/icon/chevron-right.png"
+                        alt=""
+                        aria-hidden="true"
+                    />
+                </li>
+
+                <li class="faq__item">
+                    <span class="faq__q"
+                        >Comment puis-je visualiser ma guitare en
+                        3D&nbsp;?</span
+                    >
+                    <!-- 🔁 ICÔNE : remplace le src ci-dessous par TON chemin -->
+                    <img
+                        class="faq__chev"
+                        src="asset/icon/chevron-right.png"
+                        alt=""
+                        aria-hidden="true"
+                    />
+                </li>
+            </ul>
         </section>
 
         <script>
