--- a/Index.html
+++ b/Index.html
@@ -1154,6 +1154,94 @@
                 </li>
             </ul>
         </section>
+        <footer class="tm-footer">
+            <div class="tmf-grid">
+                <!-- ===== Colonne 1 : Logo + baseline + réseaux ===== -->
+                <div class="tmf-brand">
+                    <div class="tmf-logo-row">
+                        <div class="tmf-logo-text">
+                            <em>Tone</em> <span>Maker</span>
+                        </div>
+                        <!-- 🔁 LOGO MARQUE : remplace le src par TON fichier -->
+                        <img
+                            class="tmf-logo-mark"
+                            src="asset/Logo/logo_tone_maker.png"
+                            alt=""
+                        />
+                    </div>
+
+                    <p class="tmf-tagline">
+                        Créez la guitare de vos rêves avec notre<br />
+                        plateforme de customisation innovante.
+                    </p>
+
+                    <div class="tmf-socials">
+                        <!-- 🔁 ICÔNE Facebook -->
+                        <a href="#" aria-label="Facebook">
+                            <img
+                                src="asset/icon/icon_facebook.png"
+                                alt=""
+                            />
+                        </a>
+                        <!-- 🔁 ICÔNE Instagram -->
+                        <a href="#" aria-label="Instagram">
+                            <img
+                                src="asset/icon/icon_instagram.png"
+                                alt=""
+                            />
+                        </a>
+                    </div>
+                </div>
+
+                <!-- ===== Colonne 2 : Accès ===== -->
+                <nav class="tmf-col">
+                    <h4 class="tmf-col-title">Accès</h4>
+                    <ul class="tmf-links">
+                        <li><a href="#">Configurateur</a></li>
+                        <li><a href="#">Communauté</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </nav>
+
+                <!-- ===== Colonne 3 : Informations ===== -->
+                <nav class="tmf-col">
+                    <h4 class="tmf-col-title">Informations</h4>
+                    <ul class="tmf-links">
+                        <li><a href="#">Mentions légales</a></li>
+                        <li><a href="#">CGU</a></li>
+                        <li><a href="#">Support</a></li>
+                    </ul>
+                </nav>
+
+                <!-- ===== Colonne 4 : Newsletter ===== -->
+                <div class="tmf-col tmf-news">
+                    <h4 class="tmf-col-title">Newsletter</h4>
+                    <p class="tmf-news-copy">Recevez nos dernières créations</p>
+
+                    <form class="tmf-news-form" action="#" method="post">
+                        <input
+                            type="email"
+                            class="tmf-input"
+                            placeholder="Votre email.."
+                            required
+                        />
+                        <button class="tmf-ok" type="submit">OK</button>
+                    </form>
+                </div>
+            </div>
+
+            <!-- ===== Bloc central : titre + CTA ===== -->
+            <div class="tmf-center">
+                <h3 class="tmf-center-title">
+                    Votre musique un instrument unique
+                </h3>
+                <a href="#" class="tmf-center-cta"
+                    >Créer ma guitare maintenant</a
+                >
+            </div>
+
+            <p class="tmf-copy">© 2025 Tone Maker. Tout droit réservés.</p>
+        </footer>
 
         <script>
             const burger = document.querySelector(".burger");
