Lien vers customisation

--- a/Index.html
+++ b/Index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -38,7 +38,10 @@
                 <div class="input nav-center desktop-only">
                     <button class="value">Magasin et partenaires</button>
                     <button class="value">Tout les produits</button>
-                    <button class="value">Customisation</button>
+
+                    <!-- ✅ Lien qui envoie vers customisation.html -->
+                    <a class="value" href="customisation.html">Customisation</a>
+
                     <button class="value">Communauté</button>
                     <button class="value">Mon espace</button>
                 </div>
@@ -1178,17 +1181,11 @@
                     <div class="tmf-socials">
                         <!-- 🔁 ICÔNE Facebook -->
                         <a href="#" aria-label="Facebook">
-                            <img
-                                src="asset/icon/icon_facebook.png"
-                                alt=""
-                            />
+                            <img src="asset/icon/icon_facebook.png" alt="" />
                         </a>
                         <!-- 🔁 ICÔNE Instagram -->
                         <a href="#" aria-label="Instagram">
-                            <img
-                                src="asset/icon/icon_instagram.png"
-                                alt=""
-                            />
+                            <img src="asset/icon/icon_instagram.png" alt="" />
                         </a>
                     </div>
                 </div>
