page de customisation

--- a/customisation.html
+++ b/customisation.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -38,7 +38,10 @@
                 <div class="input nav-center desktop-only">
                     <button class="value">Magasin et partenaires</button>
                     <button class="value">Tout les produits</button>
-                    <button class="value">Customisation</button>
+
+                    <!-- ✅ Lien qui envoie vers customisation.html -->
+                    <a class="value" href="customisation.html">Customisation</a>
+
                     <button class="value">Communauté</button>
                     <button class="value">Mon espace</button>
                 </div>
@@ -112,5 +115,109 @@
                 </div>
             </div>
         </header>
+        <!-- 🔽 Bouton "Créer ma guitare" fixé en bas à droite -->
+        <div class="create-guitar-container">
+            <button class="create-guitar-button">
+                <span class="text">Créer ma guitare</span>
+                <img src="asset/icon/Arrow Head.png" />
+            </button>
+        </div>
+        <footer class="tm-footer">
+            <div class="tmf-grid">
+                <!-- ===== Colonne 1 : Logo + baseline + réseaux ===== -->
+                <div class="tmf-brand">
+                    <div class="tmf-logo-row">
+                        <div class="tmf-logo-text">
+                            <em>Tone</em> <span>Maker</span>
+                        </div>
+                        <!-- 🔁 LOGO MARQUE : remplace le src par TON fichier -->
+                        <img
+                            class="tmf-logo-mark"
+                            src="asset/Logo/logo_tone_maker.png"
+                            alt=""
+                        />
+                    </div>
+
+                    <p class="tmf-tagline">
+                        Créez la guitare de vos rêves avec notre<br />
+                        plateforme de customisation innovante.
+                    </p>
+
+                    <div class="tmf-socials">
+                        <!-- 🔁 ICÔNE Facebook -->
+                        <a href="#" aria-label="Facebook">
+                            <img src="asset/icon/icon_facebook.png" alt="" />
+                        </a>
+                        <!-- 🔁 ICÔNE Instagram -->
+                        <a href="#" aria-label="Instagram">
+                            <img src="asset/icon/icon_instagram.png" alt="" />
+                        </a>
+                    </div>
+                </div>
+
+                <!-- ===== Colonne 2 : Accès ===== -->
+                <nav class="tmf-col">
+                    <h4 class="tmf-col-title">Accès</h4>
+                    <ul class="tmf-links">
+                        <li><a href="#">Configurateur</a></li>
+                        <li><a href="#">Communauté</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </nav>
+
+                <!-- ===== Colonne 3 : Informations ===== -->
+                <nav class="tmf-col">
+                    <h4 class="tmf-col-title">Informations</h4>
+                    <ul class="tmf-links">
+                        <li><a href="#">Mentions légales</a></li>
+                        <li><a href="#">CGU</a></li>
+                        <li><a href="#">Support</a></li>
+                    </ul>
+                </nav>
+
+                <!-- ===== Colonne 4 : Newsletter ===== -->
+                <div class="tmf-col tmf-news">
+                    <h4 class="tmf-col-title">Newsletter</h4>
+                    <p class="tmf-news-copy">Recevez nos dernières créations</p>
+
+                    <form class="tmf-news-form" action="#" method="post">
+                        <input
+                            type="email"
+                            class="tmf-input"
+                            placeholder="Votre email.."
+                            required
+                        />
+                        <button class="tmf-ok" type="submit">OK</button>
+                    </form>
+                </div>
+            </div>
+
+            <!-- ===== Bloc central : titre + CTA ===== -->
+            <div class="tmf-center">
+                <h3 class="tmf-center-title">
+                    Votre musique un instrument unique
+                </h3>
+                <a href="#" class="tmf-center-cta"
+                    >Créer ma guitare maintenant</a
+                >
+            </div>
+
+            <p class="tmf-copy">© 2025 Tone Maker. Tout droit réservés.</p>
+        </footer>
+
+        <script>
+            const burger = document.querySelector(".burger");
+            const mobileMenu = document.getElementById("mobileMenu");
+
+            burger.addEventListener("click", () => {
+                mobileMenu.style.display = "block";
+            });
+
+            mobileMenu.addEventListener("click", (e) => {
+                if (e.target === mobileMenu) {
+                    mobileMenu.style.display = "none";
+                }
+            });
+        </script>
     </body>
 </html>
